# remote32

./: .gitignore  CMakeLists.txt  test_server.py
components/https_request/: CMakeLists.txt  https_request.c  https_request.h
components/protobuf/: CMakeLists.txt  cast_channel.pb.c  cast_channel.pb.h
components/secure_client/: CMakeLists.txt  secure_client.c  secure_client.h
components/wifi/: CMakeLists.txt  wifi.c  wifi.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
